Bug 537083: The attachment table is too narrow by default - Patch by FrÃ©dÃ©ric Buclin <LpSolit@gmail.com> r/a=mkanat

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -399,7 +399,6 @@ dl dl > dt {
 /* Style of the attachment table and time tracking table */
 #attachment_table {
     border-collapse: collapse;
-    width: 40em;
     border: 1px solid #333333;
 }
 
